--- a/docker/nginx/conf.d.templates/server.api.conf
+++ b/docker/nginx/conf.d.templates/server.api.conf
@@ -12,6 +12,7 @@ server {
 	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/{{PORTAL_DOMAIN}}/{{PORTAL_DOMAIN}}.key;
 
 	include /etc/nginx/conf.d/server/server.api;
+	include /etc/nginx/conf.d/server/server.rpcproxy;
 }
 {{/PORTAL_DOMAIN}}
 
