--- a/docker/nginx/conf.d/server.web3.conf
+++ b/docker/nginx/conf.d/server.web3.conf
@@ -4,7 +4,7 @@ server {
     listen 80 default_server;
     listen [::]:80 default_server;
     
-    include /etc/nginx/conf.d/server/server.dnslink;
+    include /etc/nginx/conf.d/server/server.web3;
 }
 
 server {
@@ -14,5 +14,5 @@ server {
     ssl_certificate     /etc/ssl/local-certificate.crt;
     ssl_certificate_key /etc/ssl/local-certificate.key;
 
-    include /etc/nginx/conf.d/server/server.dnslink;
+    include /etc/nginx/conf.d/server/server.web3;
 }
