--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -19,9 +19,9 @@
 user root;
 worker_processes auto;
 
-#error_log  logs/error.log;
-#error_log  logs/error.log  notice;
-#error_log  logs/error.log  info;
+error_log  logs/error.log;
+error_log  logs/error.log  notice;
+error_log  logs/error.log  debug;
 
 #pid        logs/nginx.pid;
 
