--- a/docker/nginx/conf.d.templates/server.api.conf
+++ b/docker/nginx/conf.d.templates/server.api.conf
@@ -13,6 +13,7 @@ server {
 
 	include /etc/nginx/conf.d/server/server.api;
 	include /etc/nginx/conf.d/server/server.rpcproxy;
+	include /etc/nginx/conf.d/server/server.gundns;
 }
 {{/PORTAL_DOMAIN}}
 
