--- a/docker-compose.gundns.yml
+++ b/docker-compose.gundns.yml
@@ -8,17 +8,20 @@ x-logging: &default-logging
 
 services:
   gundns:
-    image: lumeweb/gundns
+    image: lumeweb/gundns:master
     restart: unless-stopped
     env_file:
       - .env
+    environment:
+      - RPC_PROXY_HOST="rpcproxy"
+      - RPC_PROXY_PORT="80"
     volumes:
-      - ./docker/data/gundns:/app
+      - ./docker/data/gundns/auth.json:/app/auth.json
     expose:
       - 8081
     networks:
       shared:
-        ipv4_address: 10.10.10.123
+        ipv4_address: 10.10.10.124
   nginx:
     depends_on:
       - rpcproxy
