--- a/docker-compose.rpcproxy.yml
+++ b/docker-compose.rpcproxy.yml
@@ -8,7 +8,7 @@ x-logging: &default-logging
 
 services:
   rpcproxy:
-    image: lumeweb/rpcproxy
+    image: lumeweb/rpcproxy:master
     restart: unless-stopped
     env_file:
       - .env
