--- a/docker/nginx/conf.d/server.web3.conf
+++ b/docker/nginx/conf.d/server.web3.conf
@@ -1,15 +1,10 @@
 lua_shared_dict dnslink 10m;
 
 server {
+    listen 443 default_server ssl;
+    listen [::]:443 default_server ssl;
     listen 80 default_server;
     listen [::]:80 default_server;
-    
-    include /etc/nginx/conf.d/server/server.web3;
-}
-
-server {
-    listen 443 default_server;
-    listen [::]:443 default_server;
 
     ssl_certificate     /etc/ssl/local-certificate.crt;
     ssl_certificate_key /etc/ssl/local-certificate.key;
