--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,10 +56,8 @@ services:
 
   nginx:
     # uncomment "build" and comment out "image" to build from sources
-    # build:
-    #   context: https://github.com/SkynetLabs/skynet-webportal.git#master
-    #   dockerfile: ./docker/nginx/Dockerfile
-    image: skynetlabs/nginx:deploy-2022-04-27
+    build:
+      dockerfile: ./docker/nginx/Dockerfile
     container_name: nginx
     restart: unless-stopped
     logging: *default-logging
