*Switch to latest tag for gundns

--- a/docker-compose.gundns.yml
+++ b/docker-compose.gundns.yml
@@ -8,7 +8,7 @@ x-logging: &default-logging
 
 services:
   gundns:
-    image: lumeweb/gundns:master
+    image: lumeweb/gundns:latest
     restart: unless-stopped
     env_file:
       - .env
